# ambient-fs

./: .gitignore  CLAUDE.md  Cargo.toml  HANDOFF_PROMPT.md  LICENSE  README.md
.beads/: issues.jsonl
.github/workflows/: ci.yml  publish.yml
crates/ambient-fs-analyzer/: Cargo.toml  README.md
crates/ambient-fs-analyzer/src/: analyzer.rs  languages.rs  lib.rs  llm_analyzer.rs
crates/ambient-fs-client/: Cargo.toml  README.md
crates/ambient-fs-client/src/: builder.rs  client.rs  lib.rs
crates/ambient-fs-core/: Cargo.toml  README.md
crates/ambient-fs-core/src/: analysis.rs  awareness.rs  event.rs  filter.rs  lib.rs  tree.rs
crates/ambient-fs-server/: Cargo.toml  README.md  build.rs
crates/ambient-fs-server/proto/: ambient_fs.proto
crates/ambient-fs-server/src/: agents.rs  awareness.rs  gateway.rs  grpc.rs  lib.rs  llm.rs  pipeline.rs  protocol.rs  socket.rs  state.rs  subscriptions.rs  sync.rs  tree_state.rs
crates/ambient-fs-store/: Cargo.toml  README.md
crates/ambient-fs-store/src/: cache.rs  lib.rs  lib_prune_test.rs  migrations.rs  prune.rs  store.rs
crates/ambient-fs-watcher/: Cargo.toml  README.md
crates/ambient-fs-watcher/src/: attribution.rs  dedup.rs  lib.rs  watcher.rs
crates/ambient-fsd/: Cargo.toml  README.md
crates/ambient-fsd/deploy/: ambient-fsd.service
crates/ambient-fsd/src/: config.rs  daemon.rs  lib.rs  main.rs  server.rs
crates/ambient-fsd/tests/: integration_test.rs
crates/e2e-test/: Cargo.toml
crates/e2e-test/src/: main.rs
deploy/: com.ambient-fs.daemon.plist
docs/: AMBIENT_FILESYSTEM_SPEC.md  AMBIENT_FS_KOLLABOR_INTEGRATION.md  LLM_INTEGRATION.md  STUB_FINDER_SPEC.md
docs/spec/missing/: agent-activity-protocol.md  analysis-pipeline.md  analyzer-stubs.md  attribution-api.md  awareness-aggregator.md  awareness-subscription.md  chat-references.md  client-agent-methods.md  client-api.md  client-close-deprecate.md  client-query-tree.md  client-reconnect.md  config-persistence.md  daemon-stubs.md  gateway-relay.md  grpc-server.md  grpc-sync.md  integration-wiring.md  kollabor-attribution-hook.md  node-client-gaps.md  node-client.md  prune-schedule.md  python-client-gaps.md  python-client.md  server-stubs.md  service-files.md  tauri-ipc-bridge.md  tauri-plugin-impl.md  tauri-plugin-skeleton.md  tree-patching.md
integrations/ambient-fs-node/: jest.config.js  package.json  tsconfig.json
integrations/ambient-fs-node/src/: client.ts  errors.ts  index.ts  transport.ts  types.ts
integrations/ambient-fs-node/test/unit/: client.test.ts  errors.test.ts  transport.test.ts  types.test.ts
integrations/ambient-fs-python/: LICENSE  README.md  pyproject.toml
integrations/ambient-fs-python/src/ambient_fs/: __init__.py  client.py  errors.py  sync_client.py  transport.py  types.py
integrations/ambient-fs-python/tests/: test_client.py  test_transport.py  test_types.py
integrations/tauri-plugin-ambient-fs/: Cargo.toml  README.md
integrations/tauri-plugin-ambient-fs/guest-js/: index.ts  package.json  types.ts
integrations/tauri-plugin-ambient-fs/src/: commands.rs  config.rs  events.rs  lib.rs  state.rs
integrations/tauri-plugin-ambient-fs/tests/: test_commands.rs  test_events.rs
