[package]
name = "ambient-fs-client"
description = "Client library for connecting to ambient-fsd"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ambient-fs-core = { path = "../ambient-fs-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
