[package]
name = "ambient-fs-client"
description = "Client library for connecting to ambient-fsd"
version = "0.1.3"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ambient-fs-core = { path = "../ambient-fs-core", version = "0.1.1" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
