[package]
name = "ambient-fs-core"
description = "Core types and pure logic for ambient-fs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = "1"
