[package]
name = "ambient-fs-server"
description = "Unix socket and gRPC server for ambient-fs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ambient-fs-core = { path = "../ambient-fs-core", version = "0.1.0" }
ambient-fs-store = { path = "../ambient-fs-store", version = "0.1.0" }
ambient-fs-watcher = { path = "../ambient-fs-watcher", version = "0.1.0" }
ambient-fs-analyzer = { path = "../ambient-fs-analyzer", version = "0.1.0" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
genai = { workspace = true }
hostname = "0.4"
chrono = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tokio-stream = { workspace = true }
futures-util = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util", "macros"] }
pretty_assertions = "1"
