[package]
name = "ambient-fs-watcher"
description = "Filesystem watcher with debounce and attribution"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ambient-fs-core = { path = "../ambient-fs-core", version = "0.1.1" }
notify = { workspace = true }
blake3 = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util", "macros"] }
