[package]
name = "ambient-fsd"
description = "Ambient filesystem awareness daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "ambient-fsd"
path = "src/main.rs"

[dependencies]
ambient-fs-core = { path = "../ambient-fs-core", version = "0.1.0" }
ambient-fs-store = { path = "../ambient-fs-store", version = "0.1.0" }
ambient-fs-watcher = { path = "../ambient-fs-watcher", version = "0.1.0" }
ambient-fs-analyzer = { path = "../ambient-fs-analyzer", version = "0.1.0" }
ambient-fs-server = { path = "../ambient-fs-server", version = "0.1.0" }
tokio = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
anyhow = "1"
thiserror = { workspace = true }
serde = { workspace = true }
uuid = { version = "1", features = ["v4"] }
nix = { version = "0.29", features = ["process", "signal", "fs"] }
signal-hook = "0.3"
dirs = "6"
rusqlite = { workspace = true }

[dev-dependencies]
tempfile = "3"
