[package]
name = "e2e-test"
version = "0.1.1"
edition = "2021"
publish = false

[[bin]]
name = "e2e-test"
path = "src/main.rs"

[[bin]]
name = "llm-e2e"
path = "src/bin/llm_e2e.rs"

[dependencies]
ambient-fs-core = { path = "../ambient-fs-core" }
ambient-fs-watcher = { path = "../ambient-fs-watcher" }
ambient-fs-analyzer = { path = "../ambient-fs-analyzer" }
ambient-fs-server = { path = "../ambient-fs-server" }
ambient-fs-store = { path = "../ambient-fs-store" }
tokio = { workspace = true }
tempfile = "3"
