[workspace]
# this crate is intentionally outside the main workspace
# it's a reusable tauri plugin component

[package]
name = "tauri-plugin-ambient-fs"
version = "0.1.1"
edition = "2021"
description = "Tauri 2 plugin for ambient-fs filesystem awareness daemon"
license = "MIT"
authors = ["Kollabor Team"]
repository = "https://github.com/kollabor/ambient-fs"

[dependencies]
tauri = { version = "2", features = ["specta"] }
ambient-fs-client = { path = "../../crates/ambient-fs-client", version = "0.1.3" }
ambient-fs-core = { path = "../../crates/ambient-fs-core", version = "0.1.1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "time", "net", "rt", "macros", "io-util"] }
tracing = "0.1"
thiserror = "2"

[features]
default = ["auto-launch"]
auto-launch = []  # enables daemon auto-launch on plugin init
